# Vision-Computer-Project-for-Facial-Aesthetics

./: .dockerignore  .env.example  .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESUMO_SVGS_ATUALIZACAO.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
data/: .gitkeep
docs/: architecture.md  ethics.md
docs/assets/: LEIA-ME_SVGS.md  SVGS_VALIDACAO.md
ethics_logs/: .gitkeep
exports/: .gitkeep
models/: .gitkeep
reports/: relatorio_estetico_20250525_162333.html  relatorio_estetico_20250525_162333.json  relatorio_estetico_20250525_162652.html  relatorio_estetico_20250525_162652.json  relatorio_estetico_20250525_163250.html  relatorio_estetico_20250525_163250.json  relatorio_estetico_20250525_164812.html  relatorio_estetico_20250525_164812.json
src/: __init__.py
src/ai/: __init__.py  deep_beauty_analyzer.py  face_analyzer.py  gan_simulator.py
src/api/: __init__.py  main.py
src/core/: __init__.py  advanced_analysis.py  face_detection.py  profile_processor.py  simulation_engine.py
src/ethics/: __init__.py  ai_ethics.py
src/reports/: report_generator.py
src/ui/: __init__.py  main_interface.py  streamlit_app.py
src/utils/: __init__.py  image_processing.py
tests/: conftest.py  test_advanced_analysis.py  test_image_processing.py  test_profile_processor.py  test_report_generator.py  test_simulation_engine.py
tests/integration/: test_api.py
tests/unit/: test_ai_ethics.py  test_gan_simulator.py
